--- a/ML/prac/0-rough.ipynb
+++ b/ML/prac/0-rough.ipynb
@@ -64,6 +64,110 @@
    "source": [
     "SimpleImputer()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "280d46a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a=\"1010\"\n",
+    "a[len(a)-1]=='0'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "363ea28e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6/4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4b94784f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate list (not \"int\") to list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m a=[\u001b[32m1\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m3\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m a=(\u001b[43ma\u001b[49m\u001b[43m+\u001b[49m\u001b[32;43m1\u001b[39;49m)%\u001b[32m3\u001b[39m\n\u001b[32m      3\u001b[39m a\n",
+      "\u001b[31mTypeError\u001b[39m: can only concatenate list (not \"int\") to list"
+     ]
+    }
+   ],
+   "source": [
+    "a=[1,2,3]\n",
+    "a=(a+1)%3\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c56728ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "t=int(input())\n",
+    "for i in range(t):\n",
+    "    n,m=map(int,input().split())\n",
+    "    a = list(map(int, input().split()))\n",
+    "\n",
+    "    for j in range(len(a)):\n",
+    "        a[j]=(a[j]+1)%m\n",
+    "    print(sum(a))\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4a4cc8a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
